--- a/src/d1.html
+++ b/src/d1.html
@@ -8,7 +8,7 @@
 		<p>
 			引用元:
 			<a href="https://www.tak-dcxi.com/article/modal-implementation-in-2025/"
-			>JavaScriptを書かない2025年のモーダルの実装方法 – TAKLOG</a>
+			>JavaScriptを書かない2025年のモーダルの実装方法 - TAKLOG</a>
 		</p>
 		<button type="button" commandfor="my-dialog" command="show-modal">
 			モーダルを開く
